fix(navbar): navbar z-index set properly

--- a/birthday_reminder/static/style/birthday_reminder.css
+++ b/birthday_reminder/static/style/birthday_reminder.css
@@ -120,7 +120,8 @@ button:hover {
 #patient-list {
   overflow-y: scroll;
   max-height: 80%;
-  margin-right: 1px
+  margin-right: 1px;
+  border-top: 1px solid #D3D3D3;
 }
 
 #patient-table-head {
@@ -129,7 +130,8 @@ button:hover {
 }
 
 .patient {
-  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+  padding: 2px 0px;
 }
 
 .patient-last-name {
@@ -238,7 +240,7 @@ button:hover {
 
 .center-screen {
   position: absolute;
-  z-index: 1000;
+  z-index: 100;
   left: 0;
   right: 0;
 }
@@ -303,6 +305,7 @@ button:hover {
   top: 0;
   left: 0;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+  z-index: 1000;
 }
 
 #nav-left {
